--- a/main.tex
+++ b/main.tex
@@ -13,10 +13,10 @@
 \pretitle{%
   \begin{center}
   \LARGE
-  \includegraphics[width=0.6 \textwidth]{../../logo}\\[\bigskipamount]
+  \includegraphics[width=0.6 \textwidth]{logo}\\[\bigskipamount]
 }
 \posttitle{\end{center}}
-\title{Show proposal - March 2019}
+\title{Diary for a new theater group}
 \author{Dodecahedron Improv Group}
 
 \begin{document}
@@ -37,34 +37,10 @@ The improvisational theater or, also called ``Improv'' is just another form of t
 
 Their stories will usually be motivated by some external interaction. In occasions the audience will provide some aspect of the story to be told that will guide the improvisers, for example a relationship between characters, the place will the action will take place or a general idea that shall be translated into a plot. 
 
-\section{March show proposal}
+\section{Sessions diary}
 
-\subsection{Purpose}
+\subsection{Wednesday 27th March}
 
-We would want to use our sWith our upcoming show in March 
-
-\subsection{Time allocation}
-
-The idea would be to make the event in the second week of March, any day from March 4th to March 8th would be perfect. The starting time for the show would be 8pm and it would last between one hour and one hour and a half.
-
-\subsection{Show description}
-
-The type show that we will perform consists on the presentation of a series of plots which are developed around some predefined games. These games provide a particular challenge to the improviser that it's added on the top of this usual task to invent a story on the go. An overview of the games that are within the porfolio of the DIT are presented in Section \ref{sec:games}. For the show in March, the 	
-
-\subsection{Logistics}
-
-Our needs in terms of logistics are fairly minimal. We just require a small stage where up to four people could act without space restrictions. The audience shall be place in front of the space, preferably while sitting either on the floor or in chairs. We do not require any sound system. If possible, the lighting condition of the room shall be such that the stage is the most illuminated space in the room.
-
-\section{Games} \label{sec:games}
-
-The follonwing Sections described all the games are within the portfolio of the TIC.
-
-\subsection{Deaths}
-% The one in which you are given a why of dying. There are 3-4 people of the stage and they all have to die at the end of the story in the way they were told to.
-This game consists
-
-\subsection{The chairs}
-% In this game, 3-4 people are sitting on chairs in the stage. On a signal provided by the moderator, they have to either stand up or remain sitted. Those of them who decide to stand up will need to create a story in a collaborative manner. On a second signal of the moderator, they need to sit down. 
-This game consists
+Bla blabla
 
 \end{document}
