Changes to main

--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,11 @@ Their stories will usually be motivated by some external interaction. In occasio
 
 \subsection{Wednesday 27th March}
 
-Bla blabla
+We worked on these topics: 
+%
+\begin{itemize}
+  \item Status: We continued working on this. Some people need to work a little bit more in the status roles when they do not feel very comfortable. For example, Aurora needs to learn how to get angry and play high status. She tends to play low status and avoid conflict.
+  \item Be obvious, not original: The objective is to show people how to manage the expectations of the audience. Everything that appears in the stage has to be at the same time expected and unexpected by the audience. 
+\end{itemize}
 
 \end{document}
